tests/lean/natsucc.lean.expected.out
natsucc.lean:6:40: error: unexpected token, '.', command, Lua script, or end-of-file expected
